--- a/app/templates/app-layout/layout.tpl.html
+++ b/app/templates/app-layout/layout.tpl.html
@@ -1,6 +1,8 @@
 <nav class="top-bar" data-topbar role="navigation">
   <section class="title-area">
-      <a id="logo" href="#/">FlourPower</a>
+      <a id="logo" href="#/">
+      <img src="../photos/logosmall.png">
+      </a>
   </section>
 
   <section id="right">
