--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3343,16 +3343,17 @@ a {
 
 .top-bar {
   padding: 0.5rem;
-  background: #4DB3AB;
+  background: url("../photos/gradient.png");
   padding: 0 0.5em;
-  position: relative; }
+  position: relative;
+  width: 100%; }
   .top-bar::before, .top-bar::after {
     content: ' ';
     display: table; }
   .top-bar::after {
     clear: both; }
   .top-bar, .top-bar ul {
-    background-color: #4DB3AB; }
+    background-color: url("../photos/gradient.png"); }
   .top-bar input {
     width: 200px;
     margin-right: 1rem; }
@@ -3519,6 +3520,9 @@ div .page-title {
     overflow: hidden;
     vertical-align: baseline; }
 
+.landing {
+  width: 100%; }
+
 .home {
   position: absolute;
   top: 50%;
@@ -3527,17 +3531,42 @@ div .page-title {
   background: transparent;
   color: white;
   text-align: center;
-  border: 2px solid #202020;
-  border-radius: 3px 3px 0 0;
   width: 50%;
   padding: 40px;
   box-sizing: border-box; }
-  .home h1 {
-    color: white;
-    font-family: 'Cookie', cursive;
-    text-align: center;
-    font-size: 6em;
-    font-weight: bold; }
+  .home .main-logo {
+    background: url("../photos/greenopacity-1.png");
+    border-radius: 3px 3px 0 0;
+    padding: 20px 40px;
+    margin-bottom: 5px; }
+  .home form {
+    background: url("../photos/gradient.png");
+    background-position: 20% 10%;
+    border: 1px solid url("../photos/gradient.png");
+    border-radius: 0 0 3px 3px;
+    padding: 30px 60px; }
+    .home form input {
+      bottom: 0;
+      border: none;
+      border-radius: 5px;
+      color: url("../photos/greenopacity-1.png");
+      background: #86D3CE;
+      font-size: 1.4  em;
+      width: 100%;
+      height: 3em;
+      margin-bottom: 15px;
+      padding: 20px; }
+    .home form input:focus {
+      color: #202020; }
+  .home a {
+    padding: 10px;
+    border: 1px solid #2B6546;
+    border-radius: 5px; }
+    .home a .reg {
+      background: transparent;
+      color: url("../photos/greenopacity-1.png"); }
+  .home .login {
+    background: #2B6546; }
 
 .register {
   width: 800px;
