--- a/sass/main.scss
+++ b/sass/main.scss
@@ -66,6 +66,9 @@ a {
 .top-bar {
   @include top-bar-container;
   background: $topbar-background;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   padding: 0 0.5em;
   position: relative;
   width: 100%;
@@ -444,9 +447,10 @@ div #recipe {
   .categories {
     margin: 20px auto 60px 10px;
     width: 100%;
+    text-align: center;
     li {
       box-sizing: border-box;
-      padding: 0 27px;
+      padding: 0 20px;
       display: inline-block;
       // text-align: center;
       #category {
